--- a/app/src/main/res/layout/fragment_roulette_main.xml
+++ b/app/src/main/res/layout/fragment_roulette_main.xml
@@ -3,14 +3,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".roulette.RouletteMainFragment">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_events"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/rl_stall"
+        android:layout_marginLeft="64dp"
+        android:layout_alignTop="@+id/rl_stall"
+        android:alpha=".80"
+        app:cardElevation="6dp"
+        android:layout_marginRight="64dp"
+        android:layout_toRightOf="@+id/rl_stall"
+        app:cardBackgroundColor="@color/background2"
+        app:cardCornerRadius="20.5dp">
+
+        <android.support.v7.widget.CardView
+            android:layout_margin="1dp"
+            app:cardCornerRadius="20dp"
+            android:layout_width="match_parent"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="@color/back_shade4"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="Roulette"
+                android:textColor="@color/background2"
+                android:textSize="30sp" />
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_roulette"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingTop="104dp"
+        android:paddingTop="120dp"
         android:paddingBottom="140dp"
         android:divider="@android:color/transparent"
         android:overScrollMode="never"
