--- a/app/src/main/res/layout/row_roulette_main.xml
+++ b/app/src/main/res/layout/row_roulette_main.xml
@@ -6,7 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
     app:cardCornerRadius="5dp"
-    android:layout_margin="5dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     app:cardBackgroundColor="@android:color/transparent"
     android:id="@+id/one">
 
