--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,6 +53,8 @@
     <color name="shade3">#18ffff</color>
     <color name="shade4">#78bf33</color>
 
+    <color name="light_gray">#66627f</color>
+
     <color name="orange_shade">#E64A19</color>
 
         <color name="textColorPrimary">#FFFFFF</color>
