--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -180,20 +180,12 @@
 
     </RelativeLayout>
 
-
-    <ImageView
-        android:id="@+id/progressBar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_double_ring_1s_200px"
-        android:visibility="gone" />
-    <!--<ProgressBar-->
-    <!--android:visibility="gone"-->
-    <!--android:id="@+id/progressBar"-->
-    <!--android:layout_width="80dp"-->
-    <!--android:layout_height="80dp"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--android:layout_marginTop="80dp"-->
-    <!--/>-->
+    <ProgressBar
+    android:visibility="gone"
+    android:id="@+id/progressBar"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:layout_centerInParent="true"
+    android:layout_marginTop="80dp"
+    />
 </RelativeLayout>
