--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -16,7 +16,7 @@
     <android.support.v7.widget.CardView
 android:id="@+id/card_events"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/heading_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/rl_stall"
