--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -7,14 +7,15 @@
 
     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:divider="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
         android:id="@+id/lv_recent"
         android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_3"
-        android:layout_marginTop="5dp"
         android:paddingBottom="140dp"
         android:overScrollMode="never"
+        android:scrollbars="none"
         />
 
 
