--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:overScrollMode="never">
+    android:overScrollMode="never"
+    android:scrollbars="none">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -97,12 +98,35 @@
             android:padding="12dp"
             android:src="@drawable/icon_roight_arrow"
             android:tint="#ffffff" />
+        <TextView
+            android:id="@+id/tv_photos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_roulette"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Photos"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_photos"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_photos"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
 
         <TextView
             android:id="@+id/tv_developers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_roulette"
+            android:layout_below="@+id/tv_photos"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="12dp"
