--- a/app/src/main/res/layout/row_live_header.xml
+++ b/app/src/main/res/layout/row_live_header.xml
@@ -8,16 +8,13 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_events"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/heading_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/rl_stall"
         android:layout_marginLeft="64dp"
-        android:layout_alignTop="@+id/rl_stall"
         android:alpha=".80"
         app:cardElevation="6dp"
         android:layout_marginRight="64dp"
-        android:layout_toRightOf="@+id/rl_stall"
         app:cardBackgroundColor="@color/background2"
         app:cardCornerRadius="20.5dp">
 
