--- a/app/src/main/res/layout/row_trending.xml
+++ b/app/src/main/res/layout/row_trending.xml
@@ -5,13 +5,12 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="6dp"
-    android:paddingTop="6dp">
+    android:layout_marginBottom="20dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/rl_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/vertical_view2"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
         android:background="@drawable/border_shadow">
@@ -20,49 +19,54 @@
             android:id="@+id/rl_title2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="8dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_sport"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/football"
+                android:layout_toLeftOf="@id/tv_sport"/>
 
                 <TextView
                     android:id="@+id/tv_sport"
+                    android:layout_alignTop="@id/iv_sport"
+                    android:layout_alignBottom="@id/iv_sport"
+                    android:gravity="center"
+                    android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:paddingBottom="4dp"
-                    android:paddingTop="8dp"
-                    android:text="Round 1"
+                    android:layout_marginStart="8dp"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:text="Table Tennis"
                     android:textColor="#ffffff"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:maxLength="18"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:drawablePadding="4dp"/>
 
-                <android.support.v7.widget.CardView
-                    app:cardBackgroundColor="@color/back_shade2"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="0dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_width="1.5dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="12dp" />
 
 
                 <TextView
+                    android:layout_below="@+id/tv_sport"
                     android:id="@+id/tv_subtitle"
+                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_centerHorizontal="true"
                     android:paddingBottom="4dp"
-                    android:paddingTop="8dp"
-                    android:text="Round 1"
-                    android:textColor="#ffffff"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    android:text="Relay Boys 4 * 100m"
+                    android:textColor="#aaeeeeee"
+                    android:textSize="11sp"
+                    android:maxLength="18"
+                    android:ellipsize="end"
+                    android:maxLines="1"/>
 
 
         </RelativeLayout>
@@ -72,10 +76,10 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/rl_title2"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:background="@drawable/line_gradient" />
 
 
@@ -92,12 +96,20 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:paddingHorizontal="36dp"
-                android:paddingVertical="8dp"
-                android:text="BITS"
+                android:paddingLeft="36dp"
+                android:paddingRight="36dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:text="BITS P"
                 android:textColor="@color/silver"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="11sp"
+                android:text="v/s"
+                android:gravity="center_vertical"/>
 
             <TextView
                 android:id="@+id/tv_college_two"
@@ -106,8 +118,10 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="15dp"
-                android:paddingHorizontal="36dp"
-                android:paddingVertical="8dp"
+                android:paddingLeft="36dp"
+                android:paddingRight="36dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:text="TITS"
                 android:textColor="@color/silver"
                 android:textSize="16sp"
@@ -129,60 +143,84 @@
             <!--android:layout_height="2dp"-->
             <!--/>-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="12dp"
-                android:layout_marginTop="6dp">
+               >
 
                 <TextView
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
                     android:id="@+id/tv_venue"
+                    android:layout_toStartOf="@id/divider_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:paddingTop="4dp"
-                    android:text="19:00"
+                    android:text="Sr Grounds"
                     android:textColor="#66627f"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"/>
 
                 <TextView
+                    android:id="@+id/divider_1"
+                    android:layout_toStartOf="@id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" | "
-                    android:textColor="#66627f"
+                    android:textColor="@color/light_gray"
                     android:textSize="25sp" />
 
                 <TextView
                     android:id="@+id/tv_time"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_time"
                     android:layout_centerHorizontal="true"
-                    android:layout_gravity="center"
                     android:paddingTop="4dp"
-                    android:text="GYM G"
-                    android:textColor="#66627f"
-                    android:textSize="12sp" />
+                    android:text="11:00 pm"
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="12"/>
 
                 <TextView
+                    android:id="@+id/divider_2"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
+                    android:layout_toEndOf="@id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" | "
-                    android:textColor="#66627f"
+                    android:textColor="@color/light_gray"
                     android:textSize="25sp" />
 
                 <TextView
                     android:id="@+id/tv_date"
+                    android:layout_alignTop="@id/divider_1"
+                    android:layout_alignBottom="@id/divider_1"
+                    android:gravity="center_vertical"
+                    android:layout_toEndOf="@id/divider_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:paddingTop="4dp"
                     android:text="19:00"
-                    android:textColor="#66627f"
-                    android:textSize="12sp" />
+                    android:textColor="@color/light_gray"
+                    android:textSize="12sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"/>
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </RelativeLayout>
 
