--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,8 @@
     <dimen name="custom_tab_layout_height">72dp</dimen>
 
     <dimen name="card_padding">4dp</dimen>
+
+    <dimen name="event_horzontal">18dp</dimen>
+
+    <dimen name="heading_bottom">30dp</dimen>
 </resources>
