--- a/app/src/main/res/layout/activity_add_money_b.xml
+++ b/app/src/main/res/layout/activity_add_money_b.xml
@@ -120,7 +120,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="1dp"
                 android:text="Rs 50"
-                android:textColor="@color/back_shade4"
+                android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:visibility="visible" />
 
@@ -158,7 +158,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="1dp"
                 android:text="Rs 100"
-                android:textColor="@color/back_shade4"
+                android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:visibility="visible" />
 
@@ -196,7 +196,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="1dp"
                 android:text="Rs 150"
-                android:textColor="@color/back_shade4"
+                android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:visibility="visible" />
 
@@ -243,7 +243,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="1dp"
                 android:text="Rs 200"
-                android:textColor="@color/back_shade4"
+                android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:visibility="visible" />
 
@@ -281,7 +281,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="1dp"
                 android:text="Rs 350"
-                android:textColor="@color/back_shade4"
+                android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:visibility="visible" />
 
@@ -319,7 +319,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="1dp"
                 android:text="Rs 500"
-                android:textColor="@color/back_shade4"
+                android:textColor="@android:color/white"
                 android:textSize="13sp"
                 android:visibility="visible" />
 
@@ -355,9 +355,9 @@
     <EditText
         android:textColor="#ffffff"
         android:inputType="number"
-        android:backgroundTint="@android:color/white"
+        android:backgroundTint="@color/back_shade6"
         android:id="@+id/et_amount"
-        android:textColorHint="#ffffff"
+        android:textColorHint="@color/back_shade6"
         android:padding="15dp"
         android:hint="Enter Amount"
         android:layout_width="match_parent"
