--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -29,6 +29,24 @@
             android:textColor="#ffffff"
             android:textSize="27sp" />
 
+        <TextView
+            android:id="@+id/tv_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:text="Logout"
+            android:background="@drawable/border_shadow_menu"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="12dp"
+            android:textColor="@android:color/white"
+            android:paddingRight="12dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_alignBottom="@+id/tv_bosm"
+            />
+
 
         <TextView
             android:id="@+id/tv_home"
