--- a/app/src/main/res/layout/layout_hover_profile.xml
+++ b/app/src/main/res/layout/layout_hover_profile.xml
@@ -2,47 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_marginTop="45dp"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        app:cardBackgroundColor="#ffffff">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Logout"
-                android:layout_alignParentEnd="true"
-                android:textColor="#000000"
-                android:padding="4dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"/>
-
-            <ImageView
-                android:id="@+id/iv_qr"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
+            <android.support.v7.widget.CardView
                 android:layout_marginTop="24dp"
-                android:src="@drawable/icon_qr_code" />
+                android:id="@+id/cv_qr"
+                app:cardBackgroundColor="@android:color/white"
+                android:layout_centerHorizontal="true"
+                app:cardCornerRadius="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_qr"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop" />
+
+            </android.support.v7.widget.CardView>
+
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/iv_qr"
+                android:layout_below="@id/cv_qr"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:padding="4dp"
-                android:text="JHAVERI AYUSH RAJESH"
-                android:textColor="#000000"
+                android:layout_marginTop="8dp"
+                android:text="Name"
+                android:textColor="@android:color/white"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_marginBottom="6dp"/>
@@ -67,12 +59,9 @@
                 android:layout_marginTop="6dp"
                 android:gravity="center"
                 android:padding="4dp"
-                android:text="f20170215@pilani.bits-pilani.ac.in"
-                android:textColor="#000000"
+                android:text="email"
+                android:textColor="@color/back_shade6"
                 android:textSize="16dp"
                 android:textStyle="italic" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
