--- a/app/src/main/res/layout/fragment_current_sport.xml
+++ b/app/src/main/res/layout/fragment_current_sport.xml
@@ -38,5 +38,13 @@
         android:rotation="180"
         android:background="@drawable/top_gradient"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
+
 
 </RelativeLayout>
