--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -29,8 +29,8 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:padding="10dp"
-            android:src="@drawable/icon_stall"
-            android:tint="#ffffff" />
+            android:src="@drawable/cart"
+            android:tint="@color/gold" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
@@ -121,7 +121,7 @@
         android:background="@color/background2"
         android:elevation="8dp"
         app:backgroundTint="@color/background2"
-        app:srcCompat="@drawable/icon_wallet" />
+        app:srcCompat="@drawable/wallet" />
 
     <TextView
         android:id="@+id/tv_total_price"
