--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.PhotoFragment">
+    tools:context=".fragments.PhotoFragment"
+    android:background="@color/background">
 
     <!--<com.github.chrisbanes.photoview.PhotoView-->
         <!--android:id="@+id/photo_view"-->
@@ -13,6 +14,12 @@
         <!--android:layout_marginHorizontal="40dp"-->
         <!--android:layout_marginVertical="100dp"/>-->
 
+
+    <ImageView
+        android:tint="#3f395e"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/bg1"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -26,5 +33,17 @@
         />
         <!--app:zoomage_minScale="0.6"-->
         <!--app:zoomage_maxScale="8"-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="@drawable/top_gradient"/>
+
+    <View
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:rotation="180"
+        android:background="@drawable/top_gradient"/>
+
 
 </FrameLayout>
