--- a/app/src/main/res/layout/fragment_roulette_extra.xml
+++ b/app/src/main/res/layout/fragment_roulette_extra.xml
@@ -10,5 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </FrameLayout>
