--- a/app/src/main/res/layout/fragment_roulette_home.xml
+++ b/app/src/main/res/layout/fragment_roulette_home.xml
@@ -63,5 +63,11 @@
         android:layout_height="72dp"
         android:rotation="180"
         android:background="@drawable/top_gradient"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </FrameLayout>
