--- a/app/src/main/res/layout/fragment_roulette_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_roulette_leaderboard.xml
@@ -100,5 +100,11 @@
                     android:divider="#BDBDBD"
                     android:dividerHeight="0.2dp"
                     android:scrollbars="none" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
