--- a/app/src/main/res/layout/fragment_roulette_main.xml
+++ b/app/src/main/res/layout/fragment_roulette_main.xml
@@ -58,4 +58,11 @@
         android:divider="@android:color/transparent"
         android:overScrollMode="never"
         />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
 </FrameLayout>
