--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:overScrollMode="never"
     android:scrollbars="none">
 
@@ -29,23 +30,7 @@
             android:textColor="#ffffff"
             android:textSize="27sp" />
 
-        <TextView
-            android:id="@+id/tv_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Logout"
-            android:background="@drawable/border_shadow_menu"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="12dp"
-            android:textColor="@android:color/white"
-            android:paddingRight="12dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_alignBottom="@+id/tv_bosm"
-            />
+
 
 
         <TextView
@@ -139,12 +124,34 @@
             android:src="@drawable/icon_roight_arrow"
             android:tint="#ffffff" />
 
+        <TextView
+            android:id="@+id/tv_map"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_photos"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Map"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_map"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_map"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
 
         <TextView
             android:id="@+id/tv_developers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_photos"
+            android:layout_below="@+id/tv_map"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="12dp"
@@ -263,8 +270,30 @@
             android:layout_below="@id/tv_contactus"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="56dp"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="66dp"
             android:src="@drawable/baxter" />
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="12dp"
+            android:layout_alignBottom="@id/iv_baxter"
+            android:layout_centerHorizontal="true"
+            app:cardBackgroundColor="@android:color/transparent">
+
+            <TextView
+                android:paddingStart="18dp"
+                android:paddingEnd="18dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:id="@+id/tv_logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="Logout"
+                android:background="@color/back_shade4"
+                android:textColor="@android:color/white"
+                />
+        </android.support.v7.widget.CardView>
 
     </RelativeLayout>
 </ScrollView>
