--- a/app/src/main/res/layout/row_photo.xml
+++ b/app/src/main/res/layout/row_photo.xml
@@ -5,27 +5,63 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <com.jsibbold.zoomage.ZoomageView
-        android:id="@+id/myZoomageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@color/light_gray"
-        app:zoomage_restrictBounds="false"
-        app:zoomage_animateOnReset="true"
-        app:zoomage_autoResetMode="ALWAYS"
-        app:zoomage_autoCenter="true"
-        app:zoomage_zoomable="true"
-        app:zoomage_translatable="false"
-        android:layout_gravity="center"
+    <RelativeLayout
+        android:id="@+id/rl_image"
+        android:layout_margin="12dp"
+        android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
-        zoomage_doubleTapToZoom="true"
-        android:layout_marginVertical="100dp"/>
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:background="@drawable/border_shadow">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:visibility="gone"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true"/>
+        <com.github.chrisbanes.photoview.PhotoView
+        android:id="@+id/photo_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+            android:scaleType="centerInside"
+        android:src="@color/light_gray"
+        />
+
+        <TextView
+            android:id="@+id/tv_error"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Error Loading Image"
+            android:drawableLeft="@drawable/icon_info"/>
+        <ProgressBar
+
+            android:id="@+id/progressBar"
+            android:visibility="gone"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+    <!--<com.jsibbold.zoomage.ZoomageView-->
+        <!--android:id="@+id/myZoomageView"-->
+        <!--android:layout_width="300dp"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:src="@color/light_gray"-->
+        <!--app:zoomage_restrictBounds="false"-->
+        <!--app:zoomage_animateOnReset="true"-->
+        <!--app:zoomage_autoResetMode="UNDER"-->
+        <!--app:zoomage_autoCenter="true"-->
+        <!--app:zoomage_zoomable="true"-->
+        <!--app:zoomage_translatable="true"-->
+        <!--app:zoomage_minScale="0.6"-->
+        <!--app:zoomage_maxScale="8"-->
+        <!--/>-->
+
+
+    <View
+        android:layout_below="@id/rl_image"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/line_gradient"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"/>
 
 </RelativeLayout>
